--- a/BlogPostAssignment/src/main/resources/application.properties
+++ b/BlogPostAssignment/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.datasource.username=root
 spring.datasource.password=root123
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 
