--- a/BlogPostAssignment/src/main/resources/validationMessages.properties
+++ b/BlogPostAssignment/src/main/resources/validationMessages.properties
@@ -11,18 +11,6 @@ user.password.size=Password should have atleast 2 characters and cannot be longe
 user.confirmpassword.notNull=Confirm password Can't be blank
 user.confirmpassword.size=Confirm password should have atleast 2 characters and cannot be longer than 60 characters
 
-######################## daily comments ####################
-dailyComment.comment.notNull=Comments can't be empty
-dailyComment.workingHours.notNull=Please select working hours
-dailyComment.taskAssignedBy.notNull=Task assigner required
-dailyComment.taskSupervisor.notNull=Task supervisor required
 
-task.taskName.notNull=Task name cant not be empty
-task.taskType.notNull=Task type can not be empty
-task.assignmentType.notNull=Task assignment type can not be empty
-task.taskDescription.notNull=Task description can not be empty
-task.taskSupervisor.notNull=Task supervisor can not be empty
-task.taskAssigner.notNull=Task assigner can not be empty
-
-######################## user reply and comments ################
-user.comments.notNull=Please enter the comments
+blog.title.notNull=Title can't empty
+blog.description.notNull=Description is needed
